--- a/tmpl/_accounts.html
+++ b/tmpl/_accounts.html
@@ -846,7 +846,7 @@
                 <div class="LocaleSelector__SelectWrapper-ot2xk3-0 kjTbik"><select
                             class="Select__SelectWrapper-c3mcht-0 iBqEYe" name="locale">
                         <option value="de">Deutsch</option>
-                        <option value="en">English</option>
+                        <option value="en" selected>English</option>
                         <option value="es">Español - España</option>
                         <option value="es-LA">Español - América Latina</option>
                         <option value="fr">Français - France</option>
