--- a/tmpl/build.html
+++ b/tmpl/build.html
@@ -15,7 +15,7 @@
             <div class="form-horizontal">
                 <div class="form-group">
                     <div class="col-3 col-sm-12">
-                        <label class="form-label" for="input-session-id">Current session ID</label>
+                        <label class="form-label" for="input-session-id">Current session id</label>
                     </div>
                     <div class="col-9 col-sm-12">
                         <div class="input-group">
