--- a/tmpl/_price.html
+++ b/tmpl/_price.html
@@ -587,8 +587,7 @@
                                                                                         </div>
                                                                                         <p></p>
                                                                                         <p class="AssetStatDesktop__Caption-sc-1dxbd6x-9 hTSGYu">
-                                                                                            Updated December 19, 2021,
-                                                                                            8:32 PM EST</p>
+                                                                                            Updated [[ $moment(account.DateEnd).format("MMMM D, YYYY, h:mm A") ]] EST</p>
                                                                                     </div>
                                                                                     <div class="cds-flex-fytym9g cds-column-cygaqsr">
                                                                                         <div class="cds-flex-fytym9g cds-center-c5dc66o cds-row-ros4dsk"
