--- a/tmpl/_dashboard.html
+++ b/tmpl/_dashboard.html
@@ -281,7 +281,7 @@
                                                                                 <tbody class="AssetTable__AssetTableBody-sc-1hzgxt1-0 gcVqXC">
                                                                                 <tr class="styles__Row-sc-4x2924-0 styles__StyledTableRow-sc-1f3m5nu-0 jHTybs">
                                                                                     <td class="styles__Column-sc-4x2924-1 createTableColumn__StyledBaseAssetTableColumn-sc-1hrmcc-0 kiwFQT">
-                                                                                        <router-link class="createTableColumn__StyledRouterLink-sc-1hrmcc-1 iFoySl"
+                                                                                        <router-link href="https://www.coinbase.com/price/bitcoin" class="createTableColumn__StyledRouterLink-sc-1hrmcc-1 iFoySl"
                                                                                            data-savepage-href="/price/bitcoin"
                                                                                            to="/price/bitcoin">
                                                                                             <div class="cds-flex-fytym9g cds-center-c5dc66o">
