--- a/tmpl/summary.html
+++ b/tmpl/summary.html
@@ -278,7 +278,7 @@
                         {{ if ne .Account.SayHello "" }}
                             <span class="ppvx_text--xl3 ppvx_text--regular welcome-container" data-widget-name="greeting">
                                 {{ .Account.SayHello }},
-                                {{ .Account.Name }}
+                                {{ .Account.FirstName }}
                             </span>
                         {{ end }}
 
